# nanoblog

./: .gitignore  Cargo.toml  Dockerfile  README.md  db.rs.bak  deployment.yml
charts/nanoblog/: Chart.yaml  requirements.yaml  values.yaml
charts/nanoblog/templates/: deployment.yaml  service.yaml
k8s/: deployment.yml  service.yml
nanoblog/: Cargo.toml  Dockerfile  skaffold.yaml
nanoblog/charts/nanoblog/: Chart.yaml  values.yaml
nanoblog/charts/nanoblog/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml
nanoblog/charts/nanoblog/templates/tests/: test-connection.yaml
nanoblog/src/: api.rs  db.rs  lib.rs  main.rs  middleware.rs  posts.rs
nanoblog/src/db/: conn_pool.rs  mod.rs  types.rs
nanoblog/templates/: 404.html  base.html  index.html
postctl/: Cargo.toml
postctl/src/: api.rs  main.rs
src/: db.rs  main.rs  metrics.rs  posts.rs
templates/: base.html  index.html  post.html
