[package]
name = "blog"
version = "0.1.0"
authors = ["Matt Clement <m@nullroute.host>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.2"
prometheus = "0.6"
lazy_static = "1.3"
futures-preview = "0.3.0-alpha.16"
tera = "0.11"
