[package]
name = "blog"
version = "0.1.0"
authors = ["Matt Clement <m@nullroute.host>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.2"
prometheus = "0.6"
lazy_static = "1.3"
tera = "0.11"
# fred = "1.0.2"
# redis = "0.11.0-beta.1"
r2d2_redis = "0.9.0"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
# bb8-redis = "0.3.0"
futures01 = { package = "futures", version = "0.1"}
# runtime = "0.3.0-alpha.4"
# runtime-tokio = "0.3.0-alpha.4"
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-threadpool = "0.1.9"
