[package]
name = "nanoblog"
version = "0.1.1"
authors = ["Matt Clement <m@nullroute.host>"]
edition = "2018"

[dependencies]
tide = "0.2"
http-service = "0.2.0"
prometheus = "0.6"
lazy_static = "1.3"
r2d2_redis = "0.9.0"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
futures01 = { package = "futures", version = "0.1"}
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-threadpool = "0.1.9"

tera = "0.11"
pulldown-cmark = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
