[package]
name = "postctl"
version = "0.1.0"
authors = ["Matt Clement <m@nullroute.host>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { git = "https://github.com/TeXitoi/structopt", branch = "master", features = ["paw"] }
nanoblog = { path = "../nanoblog" }
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
